# findword

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  findword  findword.cpp  findword.py  package.json  permutated_words.txt  requirements.txt.in  run.py  test.sh
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml
env/: pyvenv.cfg
tests/: CMakeLists.txt  test_findword.cpp  test_integration.py
